--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="add_item">Add Item</string>
+    <string name="title_activity_initial">InitialActivity</string>
+    <string name="title_activity_courses">CoursesActivity</string>
+    <string name="add_course">Add Class</string>
 
 </resources>
